# wordtoverilog

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/routes/: generate.py
backend/app/core/: config.py
backend/app/domain/: models.py  prompt_builder.py
backend/app/services/: generator.py  postprocess.py
backend/app/services/verifiers/: base.py  iverilog.py  latch_checker.py  static_rules.py
docs/: architecture.md
examples/: simple_and_gate.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: main.jsx  styles.css
frontend/src/api/: client.js
frontend/src/components/: ConstraintOptions.jsx  DiagnosticsPanel.jsx  PromptInput.jsx  StatusBar.jsx  VerilogOutput.jsx
frontend/src/pages/: GeneratePage.jsx
prompts/verilog_system/: v1.md
schemas/: generate_request.schema.json  generate_response.schema.json
tests/backend/: README.md  test_api.py  test_graycode_conversion.py  test_latch_checker.py  test_postprocess.py  test_prompt_builder.py
tools/: iverilog_wrapper.py
